Fix css so modulus isn't covered during resize

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -259,11 +259,14 @@ a:focus {
 
 /* Responsive masthead */
 @media (min-width: 768px) {
+  .masthead h1 {
+    margin-right : 400px;
+  }
   .masthead-inner {
     padding: 40px;
   }
 }
-@media (min-width: 990px) {
+@media (min-width: 1260px) {
   /* Fix the masthead to the side for impact and awesomeness */
   .masthead {
     position: fixed;
